overflow fix for wider screen sizes, styling update

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@
   scroll-snap-align: start;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 
 h2 {
