--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -11,7 +11,7 @@ a {
 }
 
 .line, .name {
-    font-size: clamp(2rem, 8vw, 10rem);
+    font-size: clamp(3rem, 8vw, 10rem);
     margin: 0rem;
     text-transform: uppercase;
 }
@@ -20,7 +20,7 @@ a {
     position: absolute;
     top: 0px;
     right: 0px;
-    margin: 30px;
+    margin: 10px;
     width: 2.5rem;
     height: 2.5rem;
     font-size: 2.5rem;
